<resources>

    <string name="app_name">What\'s Happenin\'</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="title_activity_login">Login</string>
    <string name="view_happenins_title">Upcoming Happenin\'s</string>
    <string name="test_text">This is a test set of words to take up some space.</string>
    <string name="test_label">TEST</string>
    <string name="happenin_title"></string>
    <string name="happenin_description"></string>
    <string name="happenin_when">when?</string>
    <string name="happenin_where">where?</string>
    <string name="comment">Your comment here...</string>
    <string name="view_comments">Comments</string>
    <string name="make_comment">Post a comment</string>
    <string name="post">Post</string>
    <string name="view_comments_title">Comments</string>
    <string name="create_new_user">new user</string>
    <string name="create_user">create</string>
    <string name="create_email">CSB/SJU email</string>
    <string name="create_password">enter password</string>
    <string name="create_name">enter your name</string>
    <string name="create_username">enter username</string>
    <string name="create_user_title">create user</string>
    <string name="confirm_new_password">confirm password</string>
    <string name="happenin_rating">rating?</string>
    <string name="git_home">Visit Our Homepage!</string>
    <string name="csbsju_home">Visit the CSBSJU Homepage!</string>
    <string name="new_happenin_title">Give your new Happnein a title</string>
    <string name="new_happenin_description">Now give us some details</string>
    <string name="new_happenin_location">location</string>
    <string name="create_happenin">Create a new Happenin</string>
<<<<<<< HEAD
    <string name="label_to">to</string>
    <string name="new_happenin_start_time">start time</string>
    <string name="new_happenin_end_time">end time</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_my_date_picker">MyDatePicker</string>
    <string name="picker_button">Submit</string>
    <string name="sumbit_new_happenin">Sumbit new Happnin</string>
=======
    <string name="create_rating">Rate</string>
    <string name="happenins_refresh">Refresh Happenins</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="change_password_new_password">enter new password</string>
    <string name="change_password_old_password">enter old password</string>
    <string name="change_password_button">Change Password</string>
    <string name="logout">Log Out</string>
>>>>>>> 39b2063afd66471d58ac11ae178f5aeed32f7a33

</resources>