<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="100dp"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal">

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="login"
        android:text="@string/login" />
    
    <Button
        android:id="@+id/new_user_button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="newUser"
        android:text="@string/create_new_user" />

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>