<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal">
    
    <EditText 
        android:id="@+id/old_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/change_password_old_password" 
        android:inputType="textPassword"/>
    
    <EditText 
        android:id="@+id/change_password_new_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/change_password_new_password"
        android:inputType="textPassword" />
    
    <EditText 
        android:id="@+id/change_password_confirm_new_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword" />
    
    <Button 
        android:layout_width="200dp"
     	android:layout_height="wrap_content"
     	android:layout_gravity="right"
     	android:onClick="changePassword" 
     	android:text="@string/change_password_button" />
    
    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    

</LinearLayout>