<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/new_happenin_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_happenin_title"
            android:inputType="text" />
        
        

        <EditText
            android:id="@+id/new_happenin_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_happenin_location"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/new_happenin_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_happenin_description"
            android:inputType="textMultiLine" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:endYear="2100"
            android:startYear="2000" />
	
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TimePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>